OPHY-284 Draw maakunta popup with a lower z-index than all other elements otherwise it intercepts all events even if closed. This is a workaround, proper fix is to rewrite the css for this use of the react-widgets dropdown starting from the css that comes with the component

--- a/soresu-form/web/form/style/soresu-react-widget-dropdown.less
+++ b/soresu-form/web/form/style/soresu-react-widget-dropdown.less
@@ -21,6 +21,7 @@
 
     .rw-popup-container {
       opacity: 1;
+      z-index: 1;
     }
   }
 
@@ -57,6 +58,7 @@
   }
 
   .rw-popup-container {
+    z-index: -100;
     position: absolute;
     top: 50px;
     background-color: @off-white;
